# ES_AOS_project

./: README.md
nw_mango/samples/: CMakeLists.txt  Kconfig
nw_mango/samples/nw_opencl/: CMakeLists.txt  nw_host.c
nw_mango/samples/nw_opencl/kernel/: CMakeLists.txt  Makefile.peak  nw_opencl_dev.c
report/: execution_log_1024.txt  execution_log_16.txt  report.tex
